<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue"
    android:backgroundTint="@color/backgroundBlue"
    tools:context=".ui.fragments.eventdetail.EventDetailFragment">

    <TextView
        android:id="@+id/eventName_detail"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/string_eventName"
        android:textColor="@color/pink"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/eventImage_detail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName_detail" />

    <TextView
        android:id="@+id/eventDesc_detail"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:text="@string/string_eventDescription"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventImage_detail" />

    <TextView
        android:id="@+id/eventDate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/string_eventDate"
        android:textColor="@color/pink"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDesc_detail" />

    <TextView
        android:id="@+id/eventDate_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/string_eventdateformat"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/eventDate_label"
        app:layout_constraintTop_toBottomOf="@+id/eventDesc_detail" />

    <TextView
        android:id="@+id/eventTime_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/string_eventTime"
        android:textColor="@color/pink"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/eventDate_detail"
        app:layout_constraintTop_toBottomOf="@+id/eventDesc_detail" />

    <TextView
        android:id="@+id/eventTime_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/string_timeFormat"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/eventTime_label"
        app:layout_constraintTop_toBottomOf="@+id/eventDesc_detail" />

    <TextView
        android:id="@+id/eventCover_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/string_eventCover"
        android:textColor="@color/pink"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDate_label" />

    <TextView
        android:id="@+id/eventCover_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/string_eventCover"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/eventCover_label"
        app:layout_constraintTop_toBottomOf="@+id/eventDate_detail" />

    <Button
        android:id="@+id/button_eventEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/pink"
        android:text="@string/String_edit"
        android:textColor="@color/backgroundBlue"
        android:textColorHint="@color/backgroundBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventCover_label" />

    <Button
        android:id="@+id/button_eventDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/pink"
        android:text="@string/string_eventDelete"
        android:textColor="@color/backgroundBlue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_eventEdit"
        app:layout_constraintTop_toBottomOf="@+id/eventCover_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>