<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue"
    android:backgroundTint="@color/backgroundBlue"
    tools:context=".ui.fragments.createvents.CreateEventFragment">

    <TextView
        android:id="@+id/title_editEvent"
        android:layout_width="231dp"
        android:layout_height="31dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/string_editEvent"
        android:textColor="@color/pink"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_editEvent"
        android:layout_width="170dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_editEvent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayouteditNameEvent"
        android:layout_width="341dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_editEvent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_eventEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_eventName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditDescEvent"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayouteditNameEvent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_eventEditDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_eventDescription" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_eventEditDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/string_eventDate"
        android:textColor="@color/pink"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditDescEvent" />

    <Button
        android:id="@+id/eventEditDate_button"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink"
        android:text="@string/string_eventdateformat"
        android:textColor="@color/backgroundBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toEndOf="@+id/textView_eventEditDate"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditDescEvent" />

    <TextView
        android:id="@+id/textView_eventEditTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/string_eventTime"
        android:textColor="@color/pink"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/eventEditTime_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventEditDate_button" />

    <Button
        android:id="@+id/eventEditTime_button"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink"
        android:text="@string/string_timeFormat"
        android:textColor="@color/backgroundBlue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventEditDate_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditCover"
        android:layout_width="341dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventEditTime_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputText_eventEditCover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_eventCover"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/editEvent_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pink"
        android:text="@string/String_edit"
        android:textColor="@color/backgroundBlue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditCover" />

</androidx.constraintlayout.widget.ConstraintLayout>