<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue"
    tools:context=".ui.fragments.createproducts.CreateProductFragment">

    <TextView
        android:id="@+id/editProduct_textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="177dp"
        android:text="@string/string_editProduct"
        android:textColor="@color/pink"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_editProduct"
        android:layout_width="229dp"
        android:layout_height="191dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProduct_textTitle"
        app:srcCompat="@drawable/ic_camera" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_editProductName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_editProduct">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_editProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_product_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditProductType"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_editProductName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_editProductType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_product_type" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditProductPrice"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditProductType">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_editProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_product_price"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEditProductDesc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditProductPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_descProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_product_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_editProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="159dp"
        android:backgroundTint="@color/pink"
        android:text="@string/String_edit"
        android:textColor="@color/backgroundBlue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEditProductDesc" />
</androidx.constraintlayout.widget.ConstraintLayout>